log
Thu 16 May 2024 03:07:38 PM UTC: 
 tests:  0|5
total_score: 0/70
b9a2c55
Thu 16 May 2024 03:10:25 PM UTC: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|5
total_score: 0/70
3460e8d
Thu 16 May 2024 03:12:30 PM UTC: 
 sudoku.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
548b70e
Thu 16 May 2024 03:12:53 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
f042e0f
Thu 16 May 2024 03:16:39 PM UTC: 
 sudoku.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
089b3c8
Thu 16 May 2024 03:24:52 PM UTC: 
 sudoku.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:14: error: unused variable ‘k’ [-Werror=unused-variable]
   48 |    int i, j, k;
      |              ^
cc1: all warnings being treated as errors
Compilation failed
e760ebc
Thu 16 May 2024 03:25:16 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
af56472
Thu 16 May 2024 03:25:37 PM UTC: 
 sudoku.c | 49 ++++++++++++++++++++++++++-----------------------
 1 file changed, 26 insertions(+), 23 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:15: error: unused variable ‘k’ [-Werror=unused-variable]
   47 |     int i, j, k;
      |               ^
cc1: all warnings being treated as errors
Compilation failed
7e5a25c
Thu 16 May 2024 03:26:39 PM UTC: 
 sudoku.c | 38 +++-----------------------------------
 1 file changed, 3 insertions(+), 35 deletions(-)
 tests:  2|4
total_score: 15/70
6fe673a
Thu 16 May 2024 03:34:10 PM UTC: 
 sudoku.c | 40 ++++++++++++++++++++++++++++++++++++++++
 1 file changed, 40 insertions(+)
 tests:  0|5
total_score: 0/70
72e3223
Thu 16 May 2024 03:39:32 PM UTC: 
 sudoku.c | 59 ++++++-----------------------------------------------------
 1 file changed, 6 insertions(+), 53 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:74:1: error: control reaches end of non-void function [-Werror=return-type]
   74 | }
      | ^
sudoku.c: In function ‘DFS’:
sudoku.c:78:1: error: control reaches end of non-void function [-Werror=return-type]
   78 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1a0593a
Thu 16 May 2024 03:39:56 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:78:1: error: control reaches end of non-void function [-Werror=return-type]
   78 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
856f5ee
Thu 16 May 2024 03:41:15 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
8846223
Thu 16 May 2024 03:41:57 PM UTC: 
 sudoku.c | 14 ++++++++++----
 1 file changed, 10 insertions(+), 4 deletions(-)
 tests:  0|0
b727dcb
Thu 16 May 2024 03:42:27 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
3c76bf9
Thu 16 May 2024 03:47:03 PM UTC: 
 sudoku.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  2|4
total_score: 15/70
014ed41
Thu 16 May 2024 03:48:21 PM UTC: 
 sudoku.c | 43 +++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 43 insertions(+)
 tests:  2|4
total_score: 15/70
80a250c
Thu 16 May 2024 03:58:13 PM UTC: 
 sudoku.c | 61 +++++++++++++++++++++++++++----------------------------------
 1 file changed, 27 insertions(+), 34 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:64:35: error: ‘k’ undeclared (first use in this function)
   64 |                   for (int j = 0; k < 9; k++)
      |                                   ^
sudoku.c:64:35: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:49:8: error: unused variable ‘submatriz’ [-Werror=unused-variable]
   49 |    int submatriz[3][3] = {0};
      |        ^~~~~~~~~
sudoku.c:48:8: error: unused variable ‘columna’ [-Werror=unused-variable]
   48 |    int columna[9] = {0,0,0,0,0,0,0,0,0};
      |        ^~~~~~~
sudoku.c:47:8: error: unused variable ‘fila’ [-Werror=unused-variable]
   47 |    int fila[9] = {0,0,0,0,0,0,0,0,0};
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
098a928
Thu 16 May 2024 03:58:35 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:64:35: error: ‘k’ undeclared (first use in this function)
   64 |                   for (int j = 0; k < 9; k++)
      |                                   ^
sudoku.c:64:35: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
c5a2b6c
Thu 16 May 2024 03:58:52 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:66:54: error: ‘k’ undeclared (first use in this function)
   66 |                         if (n->sudo[i][j] == n->sudo[k][j])
      |                                                      ^
sudoku.c:66:54: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
0ff5680
Thu 16 May 2024 04:00:16 PM UTC: 
 sudoku.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  2|4
total_score: 15/70
1949f86
Thu 16 May 2024 04:02:32 PM UTC: 
 sudoku.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
6ae4d75
Thu 16 May 2024 04:06:45 PM UTC: 
 sudoku.c | 15 +++++----------
 1 file changed, 5 insertions(+), 10 deletions(-)
 tests:  2|4
total_score: 15/70
84f47ba
Thu 16 May 2024 04:10:34 PM UTC: 
 sudoku.c | 33 +++++++++++++--------------------
 1 file changed, 13 insertions(+), 20 deletions(-)
 tests:  5|3
total_score: 35/70
62344f2
Thu 16 May 2024 04:11:30 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  6|2
total_score: 45/70
dc141f5
Mon 20 May 2024 01:36:48 AM UTC: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  7|1
total_score: 55/70
71a53c6
Mon 20 May 2024 01:44:26 AM UTC: 
 sudoku.c | 27 +++++++++++++++++++++++++++
 1 file changed, 27 insertions(+)
 tests:  0|0
192ce1e
